--- a/404.html
+++ b/404.html
@@ -118,7 +118,7 @@
 <ul class="widget-list">
     
     <li>
-        <a href="https://gopy.fun/posts/hello/" title="Hello">Hello</a>
+        <a href="https://gopy.fun/posts/hello.html" title="GopyFun创世文">GopyFun创世文</a>
     </li>
     
 </ul>
