--- a/tags.html
+++ b/tags.html
@@ -134,6 +134,9 @@ if (!doNotTrack) {
         <a href="https://gopy.fun/tags/cdn.html">CDN <sup><strong><sup>1</sup></strong></sup> </a>
     </li>
     <li>
+        <a href="https://gopy.fun/tags/%E5%A4%9A%E5%AA%92%E4%BD%93.html">多媒体 <sup><strong><sup>1</sup></strong></sup> </a>
+    </li>
+    <li>
         <a href="https://gopy.fun/tags/%E8%A7%84%E8%8C%83.html">规范 <sup><strong><sup>1</sup></strong></sup> </a>
     </li>
     <li>
